--- a/WebUI/ClientApp/src/app/app.component.html
+++ b/WebUI/ClientApp/src/app/app.component.html
@@ -1,9 +1,2 @@
 <ngx-ui-loader fgsType="ball-spin-clockwise-fade-rotating"></ngx-ui-loader>
-<div class="container-fluid">
-    <div class="row">
-        <app-navbar class="w-100"></app-navbar>
-    </div>
-    <div class="container">
-        <router-outlet class=""></router-outlet>
-    </div>
-</div>
+<router-outlet></router-outlet>
