--- a/WebUI/ClientApp/src/app/pages/product-catalog/products/products.component.html
+++ b/WebUI/ClientApp/src/app/pages/product-catalog/products/products.component.html
@@ -10,6 +10,9 @@
           <button class="ais-SearchBox-submit col-1 btn btn-primary" type="submit" title="Submit the search query.">
             بحث
           </button>
+          <button class="ais-SearchBox-submit col-1 btn btn-primary" (click)="openEditorToAddProduct()">
+            إضافة
+          </button>
           <button class="ais-SearchBox-reset col-1" type="reset" title="Clear the search query." hidden>
             <svg class="ais-SearchBox-resetIcon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" width="10"
               height="10">
@@ -59,39 +62,6 @@
             </tbody>
           </table>
         </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="pagination-wrapper">
-        <div class="ais-Pagination">
-          <ul class="ais-Pagination-list d-flex">
-            <li class="ais-Pagination-item ais-Pagination-item--firstPage ais-Pagination-item--disabled">
-              <span class="ais-Pagination-link" aria-label="First">‹‹</span>
-            </li>
-            <li class="ais-Pagination-item ais-Pagination-item--previousPage ais-Pagination-item--disabled">
-              <span class="ais-Pagination-link" aria-label="Previous">‹</span>
-            </li>
-            <li class="ais-Pagination-item ais-Pagination-item--selected">
-              <a class="ais-Pagination-link" href="#">1</a>
-            </li>
-            <li class="ais-Pagination-item ais-Pagination-item--page">
-              <a class="ais-Pagination-link" href="#">2</a>
-            </li>
-            <li class="ais-Pagination-item ais-Pagination-item--page">
-              <a class="ais-Pagination-link" href="#">3</a>
-            </li>
-            <li class="ais-Pagination-item">
-              <a class="ais-Pagination-link" href="#">4</a>
-            </li>
-            <li class="ais-Pagination-item ais-Pagination-item--nextPage">
-              <a class="ais-Pagination-link" aria-label="Next" href="#">›</a>
-            </li>
-            <li class="ais-Pagination-item ais-Pagination-item--lastPage">
-              <a class="ais-Pagination-link" aria-label="Last" href="#">››</a>
-            </li>
-          </ul>
-        </div>
-
       </div>
     </div>
   </div>
