--- a/WebUI/ClientApp/src/app/pages/login/login.component.html
+++ b/WebUI/ClientApp/src/app/pages/login/login.component.html
@@ -1,1 +1,18 @@
-<h1>Login</h1>
+<section class="container">
+    <div class="row p-5">
+        <form class="col-md-8 m-auto p-5 bg-white text-center" #loginForm="ngForm">
+            <div class="form-group d-flex mb-3">
+                <i class="fas fa-user m-auto"></i>
+                <input type="text" required name="email" [(ngModel)]="loginModel.email" class="w-100 input"
+                    id="exampleInputEmail1" placeholder="البريد الإلكترونى" aria-describedby="emailHelp" />
+            </div>
+            <div class="form-group d-flex mb-5">
+                <i class="fas fa-lock m-auto"></i>
+                <input type="password" required name="password" [(ngModel)]="loginModel.password" class="w-100 input"
+                    placeholder="كلمة المرور" id="exampleInputPassword1" />
+            </div>
+            <button type="submit" class="btn login-btn" (click)="login()" [disabled]="!loginForm.valid">تسجيل
+                الدخول</button>
+        </form>
+    </div>
+</section>
