Adding Photo uploader api and WebUI

--- a/WebUI/ClientApp/src/app/pages/product-catalog/products/products.component.html
+++ b/WebUI/ClientApp/src/app/pages/product-catalog/products/products.component.html
@@ -5,11 +5,11 @@
       <div class="ais-SearchBox card-search">
         <form class="ais-SearchBox-form w-100 form-group d-flex" novalidate>
           <input class="ais-SearchBox-input form-control col-5" autocomplete="off" autocorrect="off" autocapitalize="off" placeholder="اسم الصنف/كود الصنف" spellcheck="false" maxlength="512" type="search" value="" />
-          <a href="" class="ais-SearchBox-submit card-link" type="submit" title="Submit the search query.">
+          <a class="ais-SearchBox-submit card-link" type="submit" title="Submit the search query.">
             <i class="fas fa-search ml-2"></i>
             بحث
           </a>
-          <a href="" class="btn btn-outline-dark mr-auto" type="button" (click)="openEditorToAddProduct()">
+          <a class="btn btn-outline-dark mr-auto" type="button" (click)="openEditorToAddProduct()">
             اضافة
           </a>
         </form>
