--- a/WebUI/ClientApp/src/app/pages/Authentication/complete-registration/complete-registration.component.html
+++ b/WebUI/ClientApp/src/app/pages/Authentication/complete-registration/complete-registration.component.html
@@ -1,1 +1,18 @@
-<p>complete-registration works!</p>
+<div class="container">
+    <div class="row">
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+            <!-- Start form -->
+            <form>
+                <div class="form-group">
+                    <label for="exampleInputPassword1">Password</label>
+                    <input type="password" class="form-control" name="password" id="password" placeholder="Password">
+                </div>
+                <div class="form-group">
+                    <label for="exampleInputPassword1">Confirm Password</label>
+                    <input type="password" class="form-control" name="confirm" id="confirm" placeholder="Confirm">
+                </div>
+            </form>
+            <!-- End form -->
+        </div>
+    </div>
+</div>
