--- a/WebUI/ClientApp/src/app/pages/distributor-managment/distributors/distributors.component.html
+++ b/WebUI/ClientApp/src/app/pages/distributor-managment/distributors/distributors.component.html
@@ -1,1 +1,40 @@
-<p>distributors works!</p>
+<div class="row">
+    <div class="col-12">
+        <div class="card">
+            <div class="card-body" id="collapseOne" aria-labelledby="headingOne">
+                <div class="table-responsive">
+                    <table class="table table-dashboard mb-0">
+                        <thead>
+                            <tr>
+                                <th scope="col" class="border-top-0">رقم</th>
+                                <th scope="col" class="border-top-0">كود الموزع</th>
+                                <th scope="col" class="border-top-0">إسم الموزع</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr *ngFor="let distributor of distributors; let i = index"
+                                (click)="openEditorToUpdateDistributor(distributor)" rel="off-canvas"
+                                class="canvas-btn">
+                                <th scope="row">{{ i + 1 }}</th>
+                                <td>
+                                    {{ distributor?.id?.substr(0, 5) }}
+                                </td>
+                                <td>
+                                    {{ distributor?.name }}
+                                </td>
+                                <td class="text-center">
+                                    <button (click)="deleteDistributor(distributor.id)" class="btn p-0">
+                                        <i class="fas fa-trash-alt text-danger"></i>
+                                    </button>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-6">
+        <app-distributor-editor class="box" [ngClass]="{ active: openEditor }"></app-distributor-editor>
+    </div>
+</div>
