--- a/WebUI/ClientApp/src/app/pages/order-managment/all-orders/all-orders.component.html
+++ b/WebUI/ClientApp/src/app/pages/order-managment/all-orders/all-orders.component.html
@@ -42,7 +42,7 @@
                                         <span *ngSwitchCase="4" class="badge badge-pill badge-danger">تم الإلغاء</span>
                                     </div>
                                 </td>
-                                <td> {{ 'Customer Name' }} </td>
+                                <td> {{ order.customerName }} </td>
                                 <td> {{order?.customerId.substr(0, 5)}} </td>
                             </tr>
                         </tbody>
