--- a/WebUI/ClientApp/src/app/pages/distributor-managment/distributors/distributors.component.scss
+++ b/WebUI/ClientApp/src/app/pages/distributor-managment/distributors/distributors.component.scss
@@ -24,7 +24,9 @@
       padding: 0;
     }
   }
-  
+  .table-responsive{
+    height: 60vh;
+  }
   /* .ais-SearchBox { margin-bottom: 1em } */
   .pagination-wrapper {
     margin: 1rem auto;
