--- a/WebUI/ClientApp/src/app/pages/product-catalog/products/products.component.scss
+++ b/WebUI/ClientApp/src/app/pages/product-catalog/products/products.component.scss
@@ -70,10 +70,12 @@
         .fa-search{
           color: #0168fa;        }
       }
-      .card-add-btn {
-      }
     }
   }
+}
+
+.table-responsive{
+  height: 60vh;
 }
 
 .search-btn {
