--- a/WebUI/ClientApp/src/app/pages/order-managment/recently-orders/recently-orders.component.html
+++ b/WebUI/ClientApp/src/app/pages/order-managment/recently-orders/recently-orders.component.html
@@ -4,13 +4,13 @@
         <div class="w-100 card mb-3">
             <div class="ais-SearchBox card-search">
                 <form class="ais-SearchBox-form w-100 form-group d-flex" novalidate>
-                    <input class="ais-SearchBox-input form-control col-5" autocomplete="off" autocorrect="off"
+                    <input class="ais-SearchBox-input form-control col-5" autocomplete="off" autocorrect="off" (keydown)="onKeyUp($event.target.value)"
                         autocapitalize="off" placeholder="رقم الطلب" spellcheck="false" maxlength="512" type="search"
                         value="" />
-                    <a class="ais-SearchBox-submit card-link" type="submit" title="Submit the search query.">
+                    <!-- <a class="ais-SearchBox-submit card-link" type="submit" title="Submit the search query.">
                         <i class="fas fa-search ml-2"></i>
                         بحث
-                    </a>
+                    </a> -->
                 </form>
             </div>
         </div>
