--- a/WebUI/ClientApp/src/app/pages/product-catalog/products/products.component.html
+++ b/WebUI/ClientApp/src/app/pages/product-catalog/products/products.component.html
@@ -5,12 +5,12 @@
       <div class="ais-SearchBox card-search">
         <form class="ais-SearchBox-form w-100 form-group d-flex" novalidate>
           <input class="ais-SearchBox-input form-control col-5" autocomplete="off" autocorrect="off"
-            autocapitalize="off" placeholder="اسم الصنف/كود الصنف" spellcheck="false" maxlength="512" type="search"
-            value="" />
-          <a class="ais-SearchBox-submit card-link" type="submit" title="Submit the search query.">
+            (keydown)="onKeyUp($event.target.value)" autocapitalize="off" placeholder="اسم الصنف/كود الصنف"
+            spellcheck="false" maxlength="512" type="search" value="" />
+          <!-- <a class="ais-SearchBox-submit card-link" type="submit" title="Submit the search query.">
             <i class="fas fa-search ml-2"></i>
             بحث
-          </a>
+          </a> -->
           <a class="btn btn-outline-dark mr-auto" type="button" (click)="openEditorToAddProduct()">
             اضافة
           </a>
@@ -22,7 +22,8 @@
   <div class="col-12">
     <div class="card">
       <div class="card-body" id="collapseOne" aria-labelledby="headingOne">
-        <div class="table-responsive">
+        <div class="table-responsive" infiniteScroll [infiniteScrollDistance]="2" [infiniteScrollThrottle]="50"
+          (scrolled)="onScroll()" [scrollWindow]="false">
           <table class="table table-dashboard mb-0">
             <thead>
               <tr>
