--- a/WebUI/ClientApp/src/app/shared/components/navbar/navbar.component.scss
+++ b/WebUI/ClientApp/src/app/shared/components/navbar/navbar.component.scss
@@ -1,28 +1,3 @@
-/* * {
-  color: #212529;
-}
-.aside {
-  height: 90vh;
-  margin-top: 5vh;
-  margin-left: 0rem;
-  margin-right: 1rem;
-  background-color: #fff;
-  border: 1px solid #dbdbdb;
-  border-radius: 5px;
-  .nav-item {
-    width: 100%;
-    .nav-link {
-      padding: 1.5rem;
-    }
-    .nav-link:hover,
-    .nav-link:active,
-    .nav-link:focus {
-      background-color: #f1f1f1;
-      color: #2d4b65 !important;
-    }
-  }
-} */
-
 .navbar {
   background-color: #2d4b64;
   color: #eee;
@@ -45,12 +20,17 @@
       background-color: #102332;
     }
   }
-  .nav-item.active {
-    .nav-link {
+  .nav-item {
+    .nav-link.active {
       background: #102332;
       color: #eee !important;
       font-weight: 700;
     }
   }
-
+  .dropdown-toggle::after{
+    display: none;
+  }
+  .fa-user{
+    font-size: 1.5rem;
+  }
 }
