--- a/WebUI/ClientApp/src/app/pages/customers-managment/customers/customers.component.scss
+++ b/WebUI/ClientApp/src/app/pages/customers-managment/customers/customers.component.scss
@@ -79,3 +79,10 @@ app-product-editor {
   box-shadow: -5px 5px 8px rgba(0, 0, 0, 0.5);
   margin-top: 46px;
 }
+
+.nodata-img {
+  width: 400px;
+  height: 400px;
+  margin: 0 auto;
+  display: block;
+}
