--- a/WebUI/ClientApp/src/app/pages/order-managment/all-orders/all-orders.component.html
+++ b/WebUI/ClientApp/src/app/pages/order-managment/all-orders/all-orders.component.html
@@ -30,6 +30,11 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <tr *ngIf="orders.length == 0">
+                                <td colspan="4">
+                                    <img src="assets/images/nodata.svg" class="nodata-img">
+                                </td>
+                            </tr>
                             <tr *ngFor="let order of orders; let i = index" (click)="openOrderDetails(order)"
                                 rel="off-canvas" class="canvas-btn">
                                 <th scope="row">{{ i + 1 }}</th>
@@ -49,7 +54,6 @@
                                 <td> {{ order.customerName }} </td>
                                 <td> {{order?.customerId.substr(0, 5)}} </td>
                             </tr>
-
                         </tbody>
                     </table>
                 </div>
