--- a/WebUI/ClientApp/src/app/pages/order-managment/recently-orders/recently-orders.component.html
+++ b/WebUI/ClientApp/src/app/pages/order-managment/recently-orders/recently-orders.component.html
@@ -35,6 +35,11 @@
                                         </tr>
                                     </thead>
                                     <tbody>
+                                        <tr *ngIf="placedOrders.length == 0">
+                                            <td colspan="4">
+                                                <img src="assets/images/nodata.svg" class="nodata-img">
+                                            </td>
+                                        </tr>
                                         <tr *ngFor="let order of placedOrders; let i = index"
                                             (click)="openOrderDetails(order)" rel="off-canvas" class="canvas-btn">
                                             <th scope="row">{{ i + 1 }}</th>
@@ -80,6 +85,11 @@
                                         </tr>
                                     </thead>
                                     <tbody>
+                                        <tr *ngIf="confirmedOrders.length == 0">
+                                            <td colspan="4">
+                                                <img src="assets/images/nodata.svg" class="nodata-img">
+                                            </td>
+                                        </tr>
                                         <tr *ngFor="let order of confirmedOrders; let i = index"
                                             (click)="openOrderDetails(order)" rel="off-canvas" class="canvas-btn">
                                             <th scope="row">{{ i + 1 }}</th>
@@ -125,6 +135,11 @@
                                         </tr>
                                     </thead>
                                     <tbody>
+                                        <tr *ngIf="shippedOrders.length == 0">
+                                            <td colspan="4">
+                                                <img src="assets/images/nodata.svg" class="nodata-img">
+                                            </td>
+                                        </tr>
                                         <tr *ngFor="let order of shippedOrders; let i = index"
                                             (click)="openOrderDetails(order)" rel="off-canvas" class="canvas-btn">
                                             <th scope="row">{{ i + 1 }}</th>
