--- a/WebUI/ClientApp/src/app/pages/product-catalog/products/products.component.html
+++ b/WebUI/ClientApp/src/app/pages/product-catalog/products/products.component.html
@@ -34,6 +34,11 @@
               </tr>
             </thead>
             <tbody>
+              <tr *ngIf="products.length == 0">
+                <td colspan="4">
+                  <img src="assets/images/nodata.svg" class="nodata-img">
+                </td>
+              </tr>
               <tr *ngFor="let product of products; let i = index" rel="off-canvas" class="canvas-btn">
                 <th scope="row">{{ i + 1 }}</th>
                 <td (click)="openEditorToUpdateProduct(product)">
