--- a/WebUI/ClientApp/src/app/pages/product-catalog/products/products.component.scss
+++ b/WebUI/ClientApp/src/app/pages/product-catalog/products/products.component.scss
@@ -29,3 +29,9 @@
   border-top-left-radius: 0.25rem;
   border-bottom-left-radius: 0.25rem;
 }
+.nodata-img {
+  width: 400px;
+  height: 400px;
+  margin: 0 auto;
+  display: block;
+}
