Adding test exceptions for orders, product catalog and shopping van

--- a/WebUI/ClientApp/src/app/pages/product-catalog/products/products.component.html
+++ b/WebUI/ClientApp/src/app/pages/product-catalog/products/products.component.html
@@ -24,7 +24,7 @@
       <div class="card-body" id="collapseOne" aria-labelledby="headingOne">
         <div class="table-responsive" infiniteScroll [infiniteScrollDistance]="2" [infiniteScrollThrottle]="50"
           (scrolled)="onScroll()" [scrollWindow]="false">
-          <table class="table table-dashboard mb-0">
+          <table class="table table-hover table-dashboard mb-0">
             <thead>
               <tr>
                 <th scope="col" class="border-top-0">رقم</th>
