Adding CURD Operations for brands and products categories

--- a/WebUI/ClientApp/src/app/shared/components/navbar/navbar.component.html
+++ b/WebUI/ClientApp/src/app/shared/components/navbar/navbar.component.html
@@ -37,7 +37,7 @@
         <a class="nav-link" routerLink="/orders/all" routerLinkActive="active">كل الطلبات</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/products" routerLinkActive="active">المنتجات</a>
+        <a class="nav-link" routerLink="/product-catalog" routerLinkActive="active">المنتجات</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" routerLink="/customers" routerLinkActive="active">العملاء</a>
