--- a/WebUI/ClientApp/src/app/shared/components/popups/delete-popup/delete-popup.component.html
+++ b/WebUI/ClientApp/src/app/shared/components/popups/delete-popup/delete-popup.component.html
@@ -1,6 +1,6 @@
 <div class="add-popup">
     <h6 class="title-popup text-primary">{{data.title}}</h6>
-    <p class="mt-2 mb-2 text-warning">{{ viewLoading ? 'جار الحذف ......' : data.description}}</p>
+    <p class="mt-2 mb-2 text-warning">{{ viewLoading ? '...... جاري الحذف ' : data.description}}</p>
     <div class="title-info" *ngIf="data.element">
         <p>{{data.element.name}}</p>
     </div>
