Adding CRUD operations and seed data for brand and product categories

--- a/WebUI/ClientApp/src/app/pages/product-catalog/brands/brands.component.html
+++ b/WebUI/ClientApp/src/app/pages/product-catalog/brands/brands.component.html
@@ -73,6 +73,9 @@
                             class="btn p-0 m-2">
                             <i class="fas fa-remove text-warning"></i>
                         </button>
+                        <button [routerLink]="['../products', {brandId: brand.id}]" class="btn p-0 m-2">
+                            <i class="fas fa-eye text-warning"></i>
+                        </button>
                     </div>
                 </td>
             </tr>
